# ParallelAssigment

./: .gitignore  CMakeLists.txt  GoLOpenMP.h  GoLPool.h  GoLSeq.h  GoLThread.h  README.md  main.cpp  prove.cpp  script.sh  taskQueue.h
FindingPrimes/: CMakeLists.txt  README.md  main.cpp  master_worker.h  parallel_for_exec.h  script.sh
FindingPrimes/report/BenchMarkFP/: SequentialTimeMeasures  readme.md
FindingPrimes/report/BenchMarkFP/scalability/10M/: resultsMW10M.txt  resultsPF10M.txt
FindingPrimes/report/BenchMarkFP/scalability/40M/: resultsMW40M.txt
FindingPrimes/report/BenchMarkFP/speedup/: resultsMW100M.txt
FindingPrimes/report/BenchMarkFP/speedup/1M/: resultsMW1M.txt  resultsPF1M.txt
FindingPrimes/report/BenchMarkFP/speedup/40M/: resultsPF40M.txt
GoL/: GoLOpenMP.h  GoLPool.h  GoLSeq.h  GoLThread.h  main.cpp  taskQueue.h
GoL/report/BenchMarkGOL/: SequentialTimeMeasures
GoL/report/BenchMarkGOL/scalability/10000/: resultsOMP10000.txt
GoL/report/BenchMarkGOL/scalability/500/: resultsPT500.txt
GoL/report/BenchMarkGOL/speedup/1000/: resultsPT1000.txt
GoL/report/BenchMarkGOL/speedup/500/: resultsOMP500.txt
divede_conquer/: CMakeLists.txt
divide_conquer/: CMakeLists.txt  README.md  divideConquer.cpp  main.cpp
fastFileCompressor/: README.md  comp.sh  compdecomp.cpp  ffc_farm.cpp  ffc_pipe.cpp  main.cpp  utility.hpp
report/: template_Report.tex
report/BenchMarkGOL/scalability/: 5000_standard_scal.gp  5000_zoom_scal.gp
report/BenchMarkGOL/scalability/10000/: resultsPT10000.txt
report/BenchMarkGOL/scalability/5000/: resultsPT5000.txt
report/BenchMarkGOL/speedup/: 5000_standard.gp  5000_zoom.gp
report/BenchMarkGOL/speedup/5000/: resultsOMP1000.txt  resultsOMP5000.txt
simpleImageProcessing/: README.md  main.cpp  simpleImageProcessing.h
simpleImageProcessing/plot/: TimeMeasures  resultsOMP10R.txt  resultsPT10R.txt
